--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "engines": {
     "node": ">=6.0.0"
   },
+  "scripts": {
+    "start": "node server",
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Nebo15/tokenizer.web.git"
