--- a/package.json
+++ b/package.json
@@ -4,13 +4,10 @@
   "description": "Payment tokenizer for card processing over PCI DSS",
   "main": "server/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server"
   },
   "engines": {
     "node": ">=6.0.0"
-  },
-  "scripts": {
-    "start": "node server",
   },
   "repository": {
     "type": "git",
@@ -23,6 +20,13 @@
   },
   "homepage": "https://github.com/Nebo15/tokenizer.web#readme",
   "dependencies": {
-    "express": "^4.14.0"
+    "bluebird": "^3.4.6",
+    "boom": "^4.2.0",
+    "ejs": "^2.5.2",
+    "express": "^4.14.0",
+    "fs-promise": "^0.5.0"
+  },
+  "devDependencies": {
+    "mocha": "^3.1.2"
   }
 }
