--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "boom": "^4.2.0",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
-    "fs-promise": "^0.5.0"
+    "fs-promise": "^0.5.0",
+    "vanilla-text-mask": "^0.17.3"
   },
   "devDependencies": {
     "mocha": "^3.1.2"
