--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Payment tokenizer for card processing over PCI DSS",
   "main": "server/index.js",
   "scripts": {
-    "start": "node server"
+    "postinstall": "npm run build",
+    "start": "node server",
+    "build": "webpack --mode=build",
+    "dev": "webpack --progress --colors --watch --mode=dev"
   },
   "engines": {
     "node": ">=6.0.0"
@@ -23,11 +26,24 @@
     "bluebird": "^3.4.6",
     "boom": "^4.2.0",
     "ejs": "^2.5.2",
+    "es6-promise": "^4.0.5",
     "express": "^4.14.0",
     "fs-promise": "^0.5.0",
-    "vanilla-text-mask": "^0.17.3"
+    "nebo15-mask": "github:nebo15/nebo15-mask",
+    "validate.js": "^0.11.1",
+    "whatwg-fetch": "^1.0.0",
+
+    "babel": "6.3.13",
+    "babel-core": "6.1.18",
+    "babel-eslint": "5.0.0",
+    "babel-loader": "6.1.0",
+    "babel-plugin-add-module-exports": "0.1.2",
+    "babel-plugin-transform-object-assign": "^6.8.0",
+    "babel-preset-es2015": "6.3.13",
+    "eslint": "1.7.2",
+    "eslint-loader": "1.1.0",
+    "webpack": "1.12.9",
+    "yargs": "3.32.0"
   },
-  "devDependencies": {
-    "mocha": "^3.1.2"
-  }
+  "devDependencies": {}
 }
