--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Payment tokenizer for card processing over PCI DSS",
   "main": "server/index.js",
   "scripts": {
-    "postinstall": "npm run build",
+    "postinstall": "[[ $PREBUILD ]] && npm run build || exit 0",
     "start": "node server",
     "build": "webpack --mode=build",
     "dev": "webpack --progress --colors --watch --mode=dev"
@@ -31,8 +31,9 @@
     "fs-promise": "^0.5.0",
     "nebo15-mask": "github:nebo15/nebo15-mask",
     "validate.js": "^0.11.1",
-    "whatwg-fetch": "^1.0.0",
-
+    "whatwg-fetch": "^1.0.0"
+  },
+  "devDependencies": {
     "babel": "6.3.13",
     "babel-core": "6.1.18",
     "babel-eslint": "5.0.0",
@@ -44,6 +45,5 @@
     "eslint-loader": "1.1.0",
     "webpack": "1.12.9",
     "yargs": "3.32.0"
-  },
-  "devDependencies": {}
+  }
 }
