--- a/package.json
+++ b/package.json
@@ -31,9 +31,7 @@
     "fs-promise": "^0.5.0",
     "nebo15-mask": "github:nebo15/nebo15-mask",
     "validate.js": "^0.11.1",
-    "whatwg-fetch": "^1.0.0"
-  },
-  "devDependencies": {
+    "whatwg-fetch": "^1.0.0",
     "babel": "6.3.13",
     "babel-core": "6.1.18",
     "babel-eslint": "5.0.0",
@@ -41,9 +39,9 @@
     "babel-plugin-add-module-exports": "0.1.2",
     "babel-plugin-transform-object-assign": "^6.8.0",
     "babel-preset-es2015": "6.3.13",
-    "eslint": "1.7.2",
-    "eslint-loader": "1.1.0",
     "webpack": "1.12.9",
-    "yargs": "3.32.0"
+    "yargs": "3.32.0",
+    "eslint": "1.7.2",
+    "eslint-loader": "1.1.0"
   }
 }
